EPUO-768: Contextual data fetching (#268)
* checkpoint - display payment due

* checkpoint - display payment due and public notice

* consultation due count + as built due count now displayed on PWA tile

* update queries
add helper methods for contextual data class

* test cases added

* test cases added

* checkstyle fix

* comments
todo:
update test cases

* update test caes to take WebUserAccount

* copilot comments + update test cases

* check style fix

* test case

* checkstyle

* Allow access manager to also respond to update requests

* comments

* comments

* checkstyle

* comments

* comments

* checkstyle fix